fix: creates uploads folder if it doesn't exists